src/app.css
@import 'tailwindcss';
@import '@skeletonlabs/skeleton';
@import '@skeletonlabs/skeleton/optional/presets';
@import '@skeletonlabs/skeleton/themes/cerberus';
/*
  Add your theme import for your theme: "cerberus" here
*/

@source '../node_modules/@skeletonlabs/skeleton-svelte/dist';

@config '../tailwind.config.ts';

/* Apply .dark whenever the dark class is present earlier in the HTML tree */
@custom-variant dark (&:where(.dark, .dark *));

/*
  The default border color has changed to `currentColor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
	*,
	::after,
	::before,
	::backdrop,
	::file-selector-button {
		border-color: var(--color-gray-200, currentColor);
	}
	@font-face {
		font-family: 'Junicode';
		src: url('/fonts/Junicode/JunicodeVF-Roman.woff2') format('woff2');
		font-weight: 300 700;
		font-style: normal;
		font-display: swap;
		font-named-instance: 'Regular';
		}
		
		@font-face {
		font-family: 'Junicode';
		src: url('/fonts/Junicode/JunicodeVF-Italic.woff2') format('woff2');
		font-weight: 300 700;
		font-style: italic;
		font-display: swap;
		font-named-instance: 'Italic';
		}
}

:root {
	--aco-gray-1: #ffffff;
	--aco-gray-2: #f1f1f1;
	--aco-gray-3: #adadad;
	--aco-gray-4: #464646;
	--aco-teal: #0f5866;
	--aco-teal-light: #468b99;
	--aco-teal-light2: #b0c9ce;
	--aco-orange: #ac6037;
	--aco-orange-light: #c1886a;
	--aco-link: #3ac6e1;
}

p {
	@apply pt-4 text-lg text-black dark:text-white;
}
.nowrap p {
	@apply whitespace-nowrap;
}

/* Heading */
span[data-type='head_key'] {
	@apply mr-1 font-bold;
}

/* Edition Text */
.marksVisible span[data-ids] {
	@apply cursor-pointer bg-[#ffffdd] [&.multiple-ids]:bg-[#ffff99] dark:text-black;
}

.marksVisible span[data-type='mark'].highlighted {
	@apply bg-[var(--aco-orange-light)] dark:bg-[var(--aco-orange)];
}

.containerText p {
	@apply indent-6;
}
.containerText [data-type='lib-number'] {
	@apply text-center font-bold w-full inline-block mt-10;
}

.containerText [data-type='acoTitle'] {
	@apply text-center font-bold text-lg;
}
/* [data-title_line="2"] {
	@apply text-2xl
} */

/* span[data-type=note-start]::before {
  @apply text-blue-600 in-[&.highlighted]:text-red-500 mr-[1px] ml-[3px];
  @apply content-["[●"];
}
span[data-type=note-end]::before {
  @apply text-blue-600 mr-[1px] ml-[3px];
  @apply content-["●]"];
} */

/* Prevent selecting <br /> on copy-paste */
.copyWithoutLinebreaks br {
	@apply select-none;
}

/* Notes and Popup */
span[data-type='noteRefString-lines'] {
	@apply mr-1 font-bold;
}

[data-theme='cerberus'] {
	--heading-font-family: 'Junicode', 'Open Sans', sans-serif;
	--base-font-family: 'Junicode', 'Open Sans', sans-serif;
	--anchor-font-family: 'inherit';

	--body-background-color: #e8e8e8;
	--body-background-color-dark: #404e50;
}

